@@ -1,3 +1,7 @@
+2003-11-02  Choe Hwanjin <krisna@kldp.org>
+     * datetime/datetime.c:
+       change timeout interval with format string(aware of second field)
+
 2003-10-13  Choe Hwanjin <krisna@kldp.org>
     * src/datetime.c: Calendar window is toggled by clicking datetime widget
 
